--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 
 # Logs
 /debug/
+/app/debug/
 *.log
 
 # OS
@@ -14,3 +15,5 @@ Desktop.ini
 # Outputs
 /output/
 /temp/
+/app/output/
+/app/temp/
